# rtbench

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  Supp Tables(1).xlsx  THIRD_PARTY_NOTICES.md  agent.md  pyproject.toml
benchmarks/: __init__.py  _support.py  baseline.json  bench_candidate_builder.py  bench_cpvec.py  bench_data_loading.py  run_benchmarks.py
configs/: micro_0028_0039_hyper.yaml  micro_0028_0039_hyper_ens5.yaml  micro_0028_0039_hyper_ens5_big.yaml  micro_0028_0039_hyper_ens5_big_gradnorm.yaml  micro_0028_0039_hyper_ens5_big_log1p.yaml  micro_0028_0039_hyper_v2.yaml  micro_0028_0039_logk.yaml  micro_0028_0039_perdataset.yaml  micro_0039_hyper_ens10_big.yaml  micro_0233_hyper_logk.yaml  quick6_combo_hyper_ridge_trees.yaml  quick6_combo_hyper_ridge_trees_cpvec.yaml  quick6_hyper_ens5_big.yaml  quick6_hyper_ens5_big_clip15.yaml  rplc_14x14.yaml  rplc_14x14_cpvec_hyper_best.yaml  rplc_14x14_cpvec_hyper_best_gradnorm.yaml  rplc_14x14_cpvec_hyper_best_none.yaml  rplc_14x14_cpvec_hyper_best_randomsplit_v1.yaml  rplc_14x14_cpvec_hyper_best_v2.yaml  rplc_14x14_cpvec_hyper_mdlmol_0276_n10.yaml  rplc_14x14_cpvec_hyper_mdlmol_v1.yaml  rplc_14x14_cpvec_hyper_none_ch512.yaml  rplc_14x14_cpvec_mdlfeat_mlp_v1.yaml  rplc_14x14_cpvec_opt_anchor_v1.yaml  rplc_14x14_cpvec_random_hybrid_v1.yaml  rplc_14x14_cpvec_trees.yaml  rplc_14x14_hybrid.yaml  rplc_14x14_hybrid_fast.yaml  rplc_14x14_hyper_best.yaml  rplc_14x14_hyper_best_calibrated.yaml  rplc_14x14_hyper_best_gradnorm.yaml  rplc_14x14_hyper_best_lamens.yaml  rplc_14x14_hyper_best_log1p.yaml  (+39 more)
(+210 files in other folders)
